--- a/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
@@ -117,7 +117,7 @@ include::partial$lager-zahlungsdatum.adoc[]
 
 === Mandant, Zahlungsdatum
 
-:kennzahl: Die Aufträge
+:kennzahl: Die Umsatzsteuer gesamt
 :das-bedeutet: So erkennst du auf einen Blick, wie viel Umsatzsteuer sich aufgeschlüsselt nach Mandant ergibt. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
 
 include::partial$mandant-zahlungsdatum.adoc[]
