--- a/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
@@ -1,34 +1,34 @@
 = Sales volume
 :keywords: sales volume, sales, quantity, quantities, quantities sold, numbers, numbers sold, gross sales volume, net sales volume, gross sales, net sales, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
 :id: MSSWL41
-:author: team-order-core, team-bi
+:author: team-order-core
 
 :key-figure: Sales volume
 
 include::partial$key-figure-introduction.adoc[]
 
-plentymarkets calculates the key figure *Sales volume* by summing up the quantity of order items in the orders: +
+plentymarkets calculates the key figure Sales volume by summing up the quantity of order items in the orders: +
 _∑ Order items = Sales volume_ +
 By choosing a xref:business-decisions:sales-volume.adoc#100[calculation type], you decide whether to calculate with gross sales volume or the net sales volume.
 In addition, select a xref:business-decisions:sales-volume.adoc#200[dimension] to determine how the result is grouped.
 Set xref:business-decisions:sales-volume.adoc#300[filters] to specify the criteria for the calculation of the sales volume.
 
 [#100]
-== Calculation type
+== Calculation
 
 === Gross sales volume
 
 :key-figure: Sales volume
 :that-means: This means that the order items of credit notes and returns are not subtracted from the total quantity when these order types are selected in the filter Order type.
 
-include::partial$gross.adoc[]
+include::partial$brutto.adoc[]
 
 === Net sales volume
 
 :key-figure: Sales volume
 :that-means: This means that the order items of credit notes and returns are subtracted from the total quantity when these order types are selected in the filter Order type.
 
-include::partial$net.adoc[]
+include::partial$netto.adoc[]
 
 [#200]
 == Dimension
@@ -50,14 +50,14 @@ include::partial$invoice-country-creation-date.adoc[]
 === Delivery country, creation date
 
 :key-figure: Sales volume
-:this-means: This way, you can see at a glance how many items are sold broken down by which delivery country. A further differentiation is made according to the creation date of the orders.
+:this-means: This way, you can see at a glance how many items are sold broken down by which country of delivery. A further differentiation is made according to the creation date of the orders.
 
 include::partial$delivery-country-creation-date.adoc[]
 
 === Date of outgoing items
 
 :key-figure: Sales volume
-:this-means: This means that the date on which the order items were shipped is considered in the calculation.
+:this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
 
 include::partial$date-outgoing-items.adoc[]
 
@@ -126,7 +126,7 @@ include::partial$order-referrer-payment-date.adoc[]
 
 === Warehouse, payment date
 
-:kennzahl: Sales volume
+:key-figure: Sales volume
 :this-means: This way, you can see at a glance how many items are sold broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$warehouse-payment-date.adoc[]
@@ -138,29 +138,29 @@ include::partial$warehouse-payment-date.adoc[]
 
 include::partial$client-payment-date.adoc[]
 
-=== Order referrer, date of outgoing items
+=== Order referrer, completion date
 
-:key-figure: Revenue
-:this-means: This way, you can see at a glance how many items are sold broken down by order referrer. A further differentiation is made according to the date on which the order items of an order were shipped.
+:key-figure: Sales volume
+:this-means: This way, you can see at a glance how many items are sold broken down by order referrer. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$order-referrer-date-outgoing-items.adoc[]
 
-=== Warehouse, date of outgoing items
+=== Warehouse, completion date
 
 :key-figure: Sales volume
-:this-means: This way, you can see at a glance how many items are sold broken down by warehouse. A further differentiation is made according to the date on which the order items of an order were shipped.
+:this-means: This way, you can see at a glance how many items are sold broken down by warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$warehouse-date-outgoing-items.adoc[]
 
-=== Client, date of outgoing items
+=== Client, completion date
 
 :key-figure: Sales volume
-:this-means: This way, you can see at a glance how many items are sold broken down by client. A further differentiation is made according to the date on which the order items of an order were shipped.
+:this-means: This way, you can see at a glance how many items are sold broken down by client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$client-date-outgoing-items.adoc[]
 
 [#300]
-== Filter
+== Filters
 
 include::partial$filter-introduction.adoc[]
 
@@ -169,8 +169,10 @@ include::partial$filter-introduction.adoc[]
 include::partial$client.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Relational operators available for this filter
 --
+
+
 
 :filter: selected clients (icon:check-square[role="blue"])
 :commas:
@@ -178,7 +180,7 @@ include::partial$client.adoc[]
 [[table-key-figures-operators-client]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -193,17 +195,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$order-referrer.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Relational operators available for this filter
 --
 
 :filter-ending: selected order referrers (icon:check-square[role="blue"])
+
+
 :filter: selected order referrers (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-order-referrer]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -231,20 +235,21 @@ include::partial$is-between.adoc[]
 
 include::partial$order-type.adoc[]
 
-_Note_ that the quantity of order items in credit notes and returns are subtracted from the sales volume when you selected these order types in this filter.
+_Note_ that the quantity of order items in credit notes and returns are subtracted from the sales volume if you select these order types in this filter.
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order types (icon:check-square[role="blue"])
+
 :filter: selected order types (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-ordertype]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -261,17 +266,19 @@ include::partial$corresponds-to-one-of-these-values.adoc[]
 include::partial$order-status.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order statuses (icon:check-square[role="blue"])
+
+
 :filter: selected order statuses (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-orderstatus]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -300,17 +307,19 @@ include::partial$is-between.adoc[]
 include::partial$order-property-type.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order property types (icon:check-square[role="blue"])
+
+
 :filter: selected order property types (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-order-property-type]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -329,17 +338,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$order-property-value.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: entered values
+
+
 :filter: entered values
 :commas:
 
 [[table-key-figures-operators-order-property-value]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -355,20 +366,21 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 // Item ID
 
-include::partial$item-id.adoc[]
+include::partial$artikel-id.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: entered item IDs
+
+
 :filter: entered item IDs
 :commas:
 
 [[table-key-figures-operators-itemid]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -386,17 +398,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$order-item-type.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected order item types (icon:check-square[role="blue"])
+
+
 :filter: selected order item types (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-orderitemtype]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-none-of-these-values.adoc[]
 
@@ -410,17 +423,19 @@ include::partial$corresponds-to-one-of-these-values.adoc[]
 include::partial$revenue-account.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: entered revenue accounts
+
+
 :filter: entered revenue accounts
 :commas:
 
 [[table-key-figures-operators-revenue-account]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -438,17 +453,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$invoice-country.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected invoice countries (icon:check-square[role="blue"])
+
+
 :filter: selected invoice countries (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-invoice-countries]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -467,17 +484,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$delivery-country.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected delivery countries (icon:check-square[role="blue"])
+
+
 :filter: selected delivery countries (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-delivery-countries]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -496,7 +515,7 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$outgoing-items-booked.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected values (icon:check-square[role="blue"])
@@ -505,7 +524,7 @@ include::partial$outgoing-items-booked.adoc[]
 [[table-key-figures-operators-outgoing-items-booked]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -518,7 +537,7 @@ include::partial$is-equal-to.adoc[]
 include::partial$payment-status.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected values (icon:check-square[role="blue"])
@@ -527,7 +546,7 @@ include::partial$payment-status.adoc[]
 [[table-key-figures-operators-payment-status]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -540,17 +559,18 @@ include::partial$is-equal-to.adoc[]
 include::partial$warehouse.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
+
+
 :filter-ending: selected warehouses (icon:check-square[role="blue"])
-:filter: selected warehouses (icon:check-square[role="blue"])
 :commas:
 
-[[table-key-fies-operators-warehouse]]
+[[table-key-figures-operators-warehouse]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -565,17 +585,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$amazon-account.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected Amazon accounts (icon:check-square[role="blue"])
+
+
 :filter: selected Amazon accounts (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-amazon-account]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -590,17 +611,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$ebay-account.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected eBay accounts (icon:check-square[role="blue"])
+
+
 :filter: selected eBay accounts (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-ebay-account]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -615,17 +637,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$shipping-profile.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected shipping profiles (icon:check-square[role="blue"])
+
+
 :filter: selected shipping profiles (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-shipping-profile]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -637,12 +660,12 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 // Created at
 
-:filtered-data: der Aufträge
+:filtered-data: of the orders
 
 include::partial$created-at.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -652,7 +675,7 @@ include::partial$created-at.adoc[]
 [[table-key-figures-operators-created-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -675,7 +698,7 @@ include::partial$less-than.adoc[]
 include::partial$paid-at.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -685,7 +708,7 @@ include::partial$paid-at.adoc[]
 [[table-key-figures-operators-paid-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -708,7 +731,7 @@ include::partial$less-than.adoc[]
 include::partial$date-outgoing-items.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -718,7 +741,7 @@ include::partial$date-outgoing-items.adoc[]
 [[table-key-figures-operators-items-booked-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -741,17 +764,19 @@ include::partial$less-than.adoc[]
 include::partial$payment-method.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected payment methods (icon:check-square[role="blue"])
+
+
 :filter: selected payment methods (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-payment-method]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -770,17 +795,19 @@ include::partial$is-not-equal.adoc[]
 include::partial$manufacturer.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected manufacturers (icon:check-square[role="blue"])
+
+
 :filter: selected manufacturers (icon:check-square[role="blue"])
+:filter-ending: selected manufacturers (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-producer]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -796,20 +823,22 @@ include::partial$is-not-equal.adoc[]
 
 // Return reason
 
-include::partial$return-reason.adoc[]
+include::partial$retourengrund.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected return reasons (icon:check-square[role="blue"])
+
+
 :filter: selected return reasons (icon:check-square[role="blue"])
+:filter-ending: selected return reasons (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-returnreason]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -828,17 +857,18 @@ include::partial$is-not-equal.adoc[]
 include::partial$contact-id.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: entered contact IDs
+
+
 :filter: entered contact IDs
 :commas:
 
 [[table-key-figures-operators-contactid]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -850,9 +880,8 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-
 [#400]
-== Required raw data
+== Raw data
 
 :key-figure: Sales volume
 
