--- a/docs/en-gb/modules/business-decisions/pages/VAT-total.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/VAT-total.adoc
@@ -7,7 +7,7 @@
 
 include::partial$key-figure-introduction.adoc[]
 
-plentymarkets calculates the key figure *VAT total* by subtracting the net prices of the order items from the gross prices of the order items.
+plentymarkets calculates the VAT total by subtracting the net prices of the order items from the gross prices of the order items.
 The results are then summed up: +
 _(Gross price - net price) = VAT amount_ +
 _∑ VAT amount = VAT total_ +
@@ -19,132 +19,132 @@ Set xref:business-decisions:VAT-total.adoc#200[filters] to specify the criteria 
 
 === Creation date
 
-:key-figure: VAT total
+:key-figure: The VAT total
 :this-means: This means that the date on which the orders were created is considered in the calculation.
 
 include::partial$creation-date.adoc[]
 
 === Invoice country, creation date
 
-:key-figure: VAT total
+:key-figure: The VAT total
 :this-means: This way, you can see at a glance how high the VAT amount is broken down by invoice country. A further differentiation is made according to the creation date of the orders.
 
 include::partial$invoice-country-creation-date.adoc[]
 
 === Delivery country, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by delivery country. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by country of delivery. A further differentiation is made according to the creation date of the orders.
 
 include::partial$delivery-country-creation-date.adoc[]
 
 === Date of outgoing items
 
-:key-figure: VAT total
-:this-means: This means that the date on which the order items were shipped is considered in the calculation.
+:key-figure: The VAT total
+:this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
 
 include::partial$date-outgoing-items.adoc[]
 
 === Order referrer, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance how ow high the VAT amount is broken down by order referrer. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by order referrer. A further differentiation is made according to the creation date of the orders.
 
 include::partial$order-referrer-creation-date.adoc[]
 
 === Item category, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by item category. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by item category. A further differentiation is made according to the creation date of the orders.
 
 include::partial$item-category-creation-date.adoc[]
 
 === Warehouse, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by warehouse. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by warehouse. A further differentiation is made according to the creation date of the orders.
 
 include::partial$warehouse-creation-date.adoc[]
 
 === Client, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by client. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by client. A further differentiation is made according to the creation date of the orders.
 
 include::partial$client-creation-date.adoc[]
 
 === Manufacturer, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by manufacturer. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by manufacturer. A further differentiation is made according to the creation date of the orders.
 
 include::partial$manufacturer-creation-date.adoc[]
 
 === Return reason, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by return reasons. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by return reasons. A further differentiation is made according to the creation date of the orders.
 
 include::partial$return-reason-creation-date.adoc[]
 
 === Payment method, creation date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by payment method. A further differentiation is made according to the creation date of the orders.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by payment method. A further differentiation is made according to the creation date of the orders.
 
 include::partial$payment-method-creation-date.adoc[]
 
 === Payment date
 
-:key-figure: VAT total
-:this-means: This means that the date on which a payment was assigned to the order is considered in the calculation.
+:key-figure: The VAT total
+:this-means: This means that the date on which a payment was assigned to the orders is considered in the calculation.
 
 include::partial$payment-date.adoc[]
 
 === Order referrer, payment date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by order referrer. A further differentiation is made according to the date on which a payment was assigned to the order.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by order referrer. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$order-referrer-payment-date.adoc[]
 
 === Warehouse, payment date
 
-:kennzahl: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$warehouse-payment-date.adoc[]
 
 === Client, payment date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by client. A further differentiation is made according to the date on which a payment was assigned to the order.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by client. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$client-payment-date.adoc[]
 
-=== Order referrer, date of outgoing items
+=== Order referrer, completion date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by order referrer. A further differentiation is made according to the date on which the order items of an order were shipped.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by order referrer. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$order-referrer-date-outgoing-items.adoc[]
 
-=== Warehouse, date of outgoing items
+=== Warehouse, completion date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by warehouse. A further differentiation is made according to the date on which the order items of an order were shipped.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$warehouse-date-outgoing-items.adoc[]
 
-=== Client, date of outgoing items
+=== Client, completion date
 
-:key-figure: VAT total
-:this-means: This way, you can see at a glance ow high the VAT amount is broken down by client. A further differentiation is made according to the date on which the order items of an order were shipped.
+:key-figure: The VAT total
+:this-means: This way, you can see at a glance how high the VAT amount is broken down by client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$client-date-outgoing-items.adoc[]
 
 [#200]
-== Filter
+== Filters
 
 include::partial$filter-introduction.adoc[]
 
@@ -153,8 +153,10 @@ include::partial$filter-introduction.adoc[]
 include::partial$client.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
+
+
 
 :filter: selected clients (icon:check-square[role="blue"])
 :commas:
@@ -162,7 +164,7 @@ include::partial$client.adoc[]
 [[table-key-figures-operators-client]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -177,17 +179,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$order-referrer.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order referrers (icon:check-square[role="blue"])
+
+
 :filter: selected order referrers (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-order-referrer]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -215,20 +219,21 @@ include::partial$is-between.adoc[]
 
 include::partial$order-type.adoc[]
 
-_Note_ that the VAT amounts in credit notes and returns are subtracted from the total VAT amount when you selected these order types in this filter.
+_Note_ that the VAT amounts of order items in credit notes and returns are subtracted from the total VAT amount if you select these order types in this filter.
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order types (icon:check-square[role="blue"])
+
 :filter: selected order types (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-ordertype]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -245,17 +250,19 @@ include::partial$corresponds-to-one-of-these-values.adoc[]
 include::partial$order-status.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order statuses (icon:check-square[role="blue"])
+
+
 :filter: selected order statuses (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-orderstatus]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -284,17 +291,19 @@ include::partial$is-between.adoc[]
 include::partial$order-property-type.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected order property types (icon:check-square[role="blue"])
+
+
 :filter: selected order property types (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-order-property-type]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -313,17 +322,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$order-property-value.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: entered values
+
+
 :filter: entered values
 :commas:
 
 [[table-key-figures-operators-order-property-value]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -342,17 +353,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$item-id.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: entered item IDs
+
+
 :filter: entered item IDs
 :commas:
 
 [[table-key-figures-operators-itemid]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -370,17 +382,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$order-item-type.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected order item types (icon:check-square[role="blue"])
+
+
 :filter: selected order item types (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-orderitemtype]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-none-of-these-values.adoc[]
 
@@ -394,17 +407,19 @@ include::partial$corresponds-to-one-of-these-values.adoc[]
 include::partial$revenue-account.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: entered revenue accounts
+
+
 :filter: entered revenue accounts
 :commas:
 
 [[table-key-figures-operators-revenue-account]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -422,17 +437,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$invoice-country.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected invoice countries (icon:check-square[role="blue"])
+
+
 :filter: selected invoice countries (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-invoice-countries]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -451,17 +468,19 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$delivery-country.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected delivery countries (icon:check-square[role="blue"])
-:filter: selected delivery countries (icon:check-square[role="blue"])
+:filter-ending: selected countries of delivery (icon:check-square[role="blue"])
+
+
+:filter: selected countries of delivery (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-delivery-countries]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -480,16 +499,16 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$outgoing-items-booked.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected values (icon:check-square[role="blue"])
+:filter: selected values (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -502,16 +521,16 @@ include::partial$is-equal-to.adoc[]
 include::partial$payment-status.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected values (icon:check-square[role="blue"])
+:filter: selected values (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-payment-status]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -524,17 +543,18 @@ include::partial$is-equal-to.adoc[]
 include::partial$warehouse.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected warehouses (icon:check-square[role="blue"])
+
+
 :filter: selected warehouses (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-warehouse]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -549,17 +569,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$amazon-account.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected Amazon accounts (icon:check-square[role="blue"])
+
+
 :filter: selected Amazon accounts (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-amazon-account]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -574,17 +595,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$ebay-account.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected eBay accounts (icon:check-square[role="blue"])
+
+
 :filter: selected eBay accounts (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-ebay-account]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -599,17 +621,18 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 include::partial$shipping-profile.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected shipping profiles (icon:check-square[role="blue"])
+
+
 :filter: selected shipping profiles (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-shipping-profile]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -621,12 +644,12 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 
 // Created at
 
-:filtered-data: der Aufträge
+:filtered-data: of the orders
 
 include::partial$created-at.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -636,7 +659,7 @@ include::partial$created-at.adoc[]
 [[table-key-figures-operators-created-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -659,7 +682,7 @@ include::partial$less-than.adoc[]
 include::partial$paid-at.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -669,7 +692,7 @@ include::partial$paid-at.adoc[]
 [[table-key-figures-operators-paid-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -692,7 +715,7 @@ include::partial$less-than.adoc[]
 include::partial$date-outgoing-items.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected dates (icon:calendar[])
@@ -702,7 +725,7 @@ include::partial$date-outgoing-items.adoc[]
 [[table-key-figures-operators-items-booked-at]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -725,17 +748,19 @@ include::partial$less-than.adoc[]
 include::partial$payment-method.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
 :filter-ending: selected payment methods (icon:check-square[role="blue"])
+
+
 :filter: selected payment methods (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-payment-method]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -754,17 +779,19 @@ include::partial$is-not-equal.adoc[]
 include::partial$manufacturer.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected manufacturers (icon:check-square[role="blue"])
+
+
 :filter: selected manufacturers (icon:check-square[role="blue"])
+:filter-ending: selected manufacturers (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-producer]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -783,17 +810,19 @@ include::partial$is-not-equal.adoc[]
 include::partial$return-reason.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: selected return reasons (icon:check-square[role="blue"])
+
+
 :filter: selected return reasons (icon:check-square[role="blue"])
+:filter-ending: selected return reasons (icon:check-square[role="blue"])
 :commas:
 
 [[table-key-figures-operators-returnreason]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -812,17 +841,18 @@ include::partial$is-not-equal.adoc[]
 include::partial$contact-id.adoc[]
 
 [.collapseBox]
-.Comparison operators for this filter
+.Comparison operators available for this filter
 --
 
-:filter-ending: entered contact IDs
+
+
 :filter: entered contact IDs
 :commas:
 
 [[table-key-figures-operators-contactid]]
 [cols="1,1,3"]
 |====
-| Relational operator | Sign | Explanation
+| Comparison operator | Symbol | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -834,11 +864,10 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-
-[#300]
+[#400]
 == Required raw data
 
-:key-figure: VAT total
+:key-figure: The VAT total
 
 include::partial$key-figure-requirement-raw-data.adoc[]
 
@@ -854,7 +883,7 @@ include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
 
-[#400]
+[#500]
 == Edition
 
 include::partial$key-figure-requirement-edition.adoc[]
