--- a/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
@@ -1,168 +1,148 @@
-= Return rate
-:keywords: Return rate, returns, return rate amount, quantity of returns, number of returns, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
-:id: O7KBCB0
+= Orders
+:keywords: orders, number of orders, quantity, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:id: D2IR751
 :author: team-order-core, team-bi
 
-:key-figure: Return rate
+:key-figure: Orders
 
 include::partial$key-figure-introduction.adoc[]
 
-plentymarkets calculates the return rate by dividing the total number of credit notes and returns by the total number of all the order types except credit notes and returns: +
-_(∑ Credit notes ∑ Returns) : Number of all other order types = Return rate_ +
-By choosing a xref:business-decisions:return-rate.adoc#100[calculation type], you decide whether to calculate the return rate or the return rate amount.
-In addition, select a xref:business-decisions:return-rate.adoc#200[dimension] to determine how the result is grouped.
-Set xref:business-decisions:return-rate.adoc#300[filters] to specify the criteria for the calculation of the return rate.
-
-[IMPORTANT]
-.Information on return rate calculation
-====
-Do you want to use this key figure to calculate the precise return rate? Then it is mandatory to set the filter for the order type *Return* when creating the key figure. If this is not done, credit notes will be considered for the calculation as outlined in the formula above. This leads to inaccurate results.
-====
+plentymarkets calculates the number of orders by summing up the orders: +
+_∑ Orders = Number of orders_ +
+In addition, select a xref:business-decisions:orders-key-figure.adoc#100[dimension] to determine how the result is grouped.
+Set xref:business-decisions:orders-key-figure.adoc#200[filters] to specify the criteria for the calculation of the sales volume.
+Note that those orders are counted that you define in the filter *Order type*. If you don't set this filter, all orders of all order types are counted.
 
 [#100]
-== Calculation
-
-=== Return rate
-
-The return rate is calculated as described in the introduction: The number of credit notes and returns is divided by the amount of order types which are not credit notes and returns.
-Note that you have to set the filter *Order type* with the selection credit note and return.
-
-=== Return rate amount
-
-The return rate amount is calculated by summing up the gross amounts of all credit notes and returns. This result is then divided by the total gross amount of all other order types: +
-_(∑ gross amounts credit notes \+ ∑ gross amounts returns) : gross total other order types = Return rate amount_ +
-Note that you have to set the filter *Order type* with the selection credit note and return.
-
-[#200]
 == Dimension
 
 === Creation date
 
-:key-figure: The return rate
+:key-figure: Orders
 :this-means: This means that the date on which the orders were created is considered in the calculation.
 
 include::partial$creation-date.adoc[]
 
 === Invoice country, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by invoice country. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by invoice country. A further differentiation is made according to the creation date of the orders.
 
 include::partial$invoice-country-creation-date.adoc[]
 
 === Delivery country, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by invoice country. A further differentiation is made according to the creation date of the orders.
 
 include::partial$delivery-country-creation-date.adoc[]
 
 === Date of outgoing items
 
-:key-figure: The return rate
+:key-figure: Orders
 :this-means: This means that the date on which outgoing items were booked for the orders is considered in the calculation.
 
 include::partial$date-outgoing-items.adoc[]
 
 === Order referrer, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by order referrer. A further differentiation is made according to the creation date of the orders.
 
 include::partial$order-referrer-creation-date.adoc[]
 
 === Item category, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by item category. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by item category. A further differentiation is made according to the creation date of the orders.
 
 include::partial$item-category-creation-date.adoc[]
 
 === Warehouse, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by warehouse. A further differentiation is made according to the creation date of the orders.
 
 include::partial$warehouse-creation-date.adoc[]
 
 === Client, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by client. A further differentiation is made according to the creation date of the orders.
 
 include::partial$client-creation-date.adoc[]
 
 === Manufacturer, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by manufacturer. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by manufacturer. A further differentiation is made according to the creation date of the orders.
 
 include::partial$manufacturer-creation-date.adoc[]
 
 === Return reason, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by invoice country. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by return reasons. A further differentiation is made according to the creation date of the orders.
 
 include::partial$return-reason-creation-date.adoc[]
 
 === Payment method, creation date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by payment method. A further differentiation is made according to the creation date of the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by payment method. A further differentiation is made according to the creation date of the orders.
 
 include::partial$payment-method-creation-date.adoc[]
 
 === Payment date
 
-:key-figure: The return rate
+:key-figure: Orders
 :this-means: This means that the date on which a payment was assigned to the orders is considered in the calculation.
 
 include::partial$payment-date.adoc[]
 
 === Order referrer, payment date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the date on which a payment was assigned to the order.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by order referrer. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$order-referrer-payment-date.adoc[]
 
 === Warehouse, payment date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by warehouse. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$warehouse-payment-date.adoc[]
 
 === Client, payment date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the date on which a payment was assigned to the order.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by client. A further differentiation is made according to the date on which a payment was assigned to the order.
 
 include::partial$client-payment-date.adoc[]
 
 === Order referrer, completion date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by country of delivery. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by order referrer. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$order-referrer-date-outgoing-items.adoc[]
 
 === Warehouse, completion date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by warehouse. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$warehouse-date-outgoing-items.adoc[]
 
 === Client, completion date
 
-:key-figure: The return rate
-:this-means: This way, you can see at a glance how high the return rate is broken down by client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
+:key-figure: Orders
+:this-means: This way, you can see at a glance how many orders are generated broken down by client. A further differentiation is made according to the date on which outgoing items were booked for the orders.
 
 include::partial$client-date-outgoing-items.adoc[]
 
-[#300]
+[#200]
 == Filters
 
 include::partial$filter-introduction.adoc[]
@@ -237,8 +217,6 @@ include::partial$is-between.adoc[]
 // Order type
 
 include::partial$order-type.adoc[]
-
-_Note_ that you have to set this filter. Select the order types credit note and return.
 
 [.collapseBox]
 .Comparison operators available for this filter
@@ -557,7 +535,7 @@ include::partial$is-equal-to.adoc[]
 
 --
 
-// Warehouse
+Warehouse
 
 include::partial$warehouse.adoc[]
 
@@ -883,11 +861,10 @@ include::partial$corresponds-to-none-of-these-values.adoc[]
 |====
 
 --
-
-[#400]
+[#300]
 == Required raw data
 
-:key-figure: Return rate
+:key-figure: Orders
 
 include::partial$key-figure-requirement-raw-data.adoc[]
 
@@ -903,7 +880,7 @@ include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
 
-[#500]
+[#400]
 == Edition
 
 include::partial$key-figure-requirement-edition.adoc[]
