FIX the next batch of broken links

--- a/docs/de-de/modules/daten/pages/artikel.adoc
+++ b/docs/de-de/modules/daten/pages/artikel.adoc
@@ -763,7 +763,7 @@ Bei diesen Dateitypen siehst du die eigentlichen Exportwerte.
 Beachte, dass das xref:daten:ElasticSync.adoc#[Import-Tool] nur die Dateitypen CSV und TXT akzeptiert.
 
 *_Möglicher Workaround 2_*:
-Exportiere die Daten stattdessen mit den Tools xref:daten:artikelbilder.adoc#[FormatDesigner] und xref:daten:elastischer-export.adoc#700[Elastischer Export].
+Exportiere die Daten stattdessen mit den Tools xref:daten:formatdesigner-artikelbilder.adoc#[FormatDesigner] und xref:daten:elastischer-export.adoc#700[Elastischer Export].
 
 | *Einzelbild*
 |Gib eine Positionsnummer in das Textfeld *Bildposition* ein.
@@ -1457,7 +1457,7 @@ Bei diesen Dateitypen siehst du die eigentlichen Exportwerte.
 Beachte, dass das xref:daten:ElasticSync.adoc#[Import-Tool] nur die Dateitypen CSV und TXT akzeptiert.
 
 *_Möglicher Workaround 2_*:
-Exportiere die Daten stattdessen mit den Tools xref:daten:artikel.adoc#[FormatDesigner] und xref:daten:elastischer-export.adoc#700[Elastischer Export].
+Exportiere die Daten stattdessen mit den Tools xref:daten:formatdesigner-artikel.adoc#[FormatDesigner] und xref:daten:elastischer-export.adoc#700[Elastischer Export].
 
 --
 // end::faq-array[]
