--- a/docs/de-de/modules/daten/pages/elasticSync-eigenschaften.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-eigenschaften.adoc
@@ -530,7 +530,7 @@ Gib den Namen der Kategorie in die CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Alphanumerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:maerkte:varianten-vorbereiten.adoc#1395[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » Tab: Amazon].
+Das Ergebnis des Imports findest du im Backend im Menü xref:artikel:eigenschaften.adoc#property-amazon[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » Tab: Amazon].
 
 '''
 [#320]
@@ -544,7 +544,7 @@ Gib den Namen des Feldes in die CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Alphanumerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:maerkte:varianten-vorbereiten.adoc#1395[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » Tab: Amazon].
+Das Ergebnis des Imports findest du im Backend im Menü xref:artikel:eigenschaften.adoc#property-amazon[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » Tab: Amazon].
 
 '''
 [#330]
@@ -600,4 +600,4 @@ Gib die Amazon-Plattform in die CSV-Datei ein.
 |Amazon.ae
 |===
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:maerkte:varianten-vorbereiten.adoc#1395[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » Tab: Amazon].
+Das Ergebnis des Imports findest du im Backend im Menü xref:artikel:eigenschaften.adoc#property-amazon[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » Tab: Amazon].
