--- a/docs/de-de/modules/daten/pages/formatdesigner-artikel.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-artikel.adoc
@@ -82,7 +82,7 @@ include::artikel:partial$aktionsgutschein.adoc[]
 === customsTariffNumber
 
 icon:warning[role="red"] Dieses Feld hat keine Funktion.
-Verwende stattdessen das Feld xref:daten:artikel.adoc#1010[Variation.customsTariffNumber].
+Verwende stattdessen das Feld xref:daten:formatdesigner-artikel.adoc#1010[Variation.customsTariffNumber].
 
 '''
 [#120]
@@ -233,7 +233,7 @@ icon:warning[role="red"] Dieses Feld hat keine Funktion.
 === position
 
 icon:warning[role="red"] Dieses Feld hat keine Funktion.
-Verwende stattdessen das Feld xref:daten:artikel.adoc#1450[Variation.position].
+Verwende stattdessen das Feld xref:daten:formatdesigner-artikel.adoc#1450[Variation.position].
 
 '''
 [#350]
@@ -1080,7 +1080,7 @@ include::artikel:partial$lademittel.adoc[]
 === parentVariationID
 
 icon:warning[role="red"] Dieses Feld hat keine Funktion.
-Verwende stattdessen das Feld xref:daten:artikel.adoc#1270[Variation.mainVariationId].
+Verwende stattdessen das Feld xref:daten:formatdesigner-artikel.adoc#1270[Variation.mainVariationId].
 
 '''
 [#1440]
