--- a/docs/de-de/modules/daten/pages/formatdesigner-eigenschaften.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-eigenschaften.adoc
@@ -15,7 +15,7 @@ Diese Seite dient lediglich als Referenz und setzt voraus, dass du bereits Grund
 ====
 Dieser Format-Typ exportiert Informationen über Eigenschaften und Eigenschaftsgruppen.
 Er exportiert _nicht_ die Verknüpfungen zwischen Varianten und Eigenschaften, d.h. er gibt nicht an, welche Eigenschaften mit welchen Varianten verknüpft sind.
-Wenn du solche Eigenschaftsverknüpfungen exportieren möchtest, dann verwende stattdessen den xref:daten:artikel.adoc#1600[Format-Typ Artikel].
+Wenn du solche Eigenschaftsverknüpfungen exportieren möchtest, dann verwende stattdessen den xref:daten:formatdesigner-artikel.adoc#1600[Format-Typ Artikel].
 ====
 
 '''
