--- a/docs/de-de/modules/daten/pages/hersteller.adoc
+++ b/docs/de-de/modules/daten/pages/hersteller.adoc
@@ -191,8 +191,8 @@ Du kannst während des Exportvorgangs weiter arbeiten.
 
 image::daten:katalog-export.gif[]
 
-* xref:daten:kataloge-verwalten.adoc#260[Weitere Informationen zum Export]
-* xref:daten:kataloge-verwalten.adoc#255[Alternativ: Vorschau exportieren]
+* xref:daten:standardformate-exportieren.adoc#manual-export[Weitere Informationen zum Export]
+* xref:daten:standardformate-exportieren.adoc#preview[Alternativ: Vorschau exportieren]
 
 --
 
