--- a/docs/de-de/modules/business-entscheidungen/pages/dein-vertrag.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/dein-vertrag.adoc
@@ -96,7 +96,7 @@ Vor Vertragsende oder Kündigung solltest du dir überlegen, welche Daten du auc
 |Exportiere benötigte Dokumente über das Dokumentenarchiv. Gehe dazu ins Menü *Aufträge » Dokumentenarchiv* und wähle das Tab *Export*. Nimm die für dich passenden Einstellungen vor und exportiere alle relevanten Dokumente. Beachte sowohl bei der Auswahl der Dokumente als auch des Zeitraumes steuerrechtliche Vorgaben sowie gesetzliche Vorgaben zu Aufbewahrungszeiten.
 
 |*Warenbestand*
-|Erstelle im Menü *Daten » Elastischer Export* ein Exportformat für deinen xref:daten:warenbestand.adoc[Warenbestand]. Wir empfehlen mindestens die Auswahl folgender Exportfelder: +
+|Erstelle im Menü *Daten » Elastischer Export* ein Exportformat für deinen xref:daten:formatdesigner-warenbestand.adoc#[Warenbestand]. Wir empfehlen mindestens die Auswahl folgender Exportfelder: +
 - Item.id = Artikel-ID +
 - ItemDescription.name = Artikelname +
 - Variation.name = Variantenname +
@@ -106,7 +106,7 @@ Vor Vertragsende oder Kündigung solltest du dir überlegen, welche Daten du auc
 - Warehouse.name = Name des Lagers
 
 |*Warenbewegungen*
-|Erstelle im Menü *Daten » Elastischer Export* ein Exportformat für deine xref:daten:warenbewegungen.adoc[Warenbewegungen]. Wir empfehlen mindestens die Auswahl folgender Exportfelder: +
+|Erstelle im Menü *Daten » Elastischer Export* ein Exportformat für deine xref:daten:formatdesigner-warenbewegung.adoc#[Warenbewegungen]. Wir empfehlen mindestens die Auswahl folgender Exportfelder: +
 - StockMovements.id = Vorgangs-ID der Warenbewegung +
 - StockMovements.itemid = Artikel-ID +
 - Variation.id = Varianten-ID +
