--- a/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
+++ b/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
@@ -6,6 +6,15 @@
 Damit eine Variante zu {market} exportiert werden kann, muss die Variante die folgenden Voraussetzungen erfüllen:
 //end::checklist-intro[]
 
+//tag::checklist-variation-export-status[]
+[.collapseBox]
+.Wurde der Katalog exportiert?
+--
+. Öffne das Menü xref::data:catalogues-status.adoc#[Daten » Katalogexportstatus]. +
+. Prüfe in der Liste Zustand und Fortschritt des Exports.
+--
+//end::checklist-variation-export-status[]
+
 //tag::checklist-variation-referrer[]
 [.collapseBox]
 .Ist die Auftragsherkunft aktiviert?
