--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -311,19 +311,27 @@ Futterstoff zuordnen und an der Variante speichern:
 --
 
 | Schuhe: Obermaterial
-| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+| Für Schuhe dürfen nur die folgenden Materialien angegeben werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
 
 . Eigenschaft mit den folgenden Einstellungen erstellen:
-* Name: Schuhe: Obermaterial
+* Name: Schuhe
 * Bereich: Artikel
-* Typ: Auswahl
-* Auswahlwerte:
+* Typ:
+. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
+. Als Wert Materialangaben eingeben nach dem Muster: +
+{"material1","material2","material3"} +
+* Gültige Werte für Material:
   ** sonstiges-material
   ** leder
   ** beschichtetes-leder
   ** textil
-. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
-. Für die Variante passenden Eigenschaftswert wählen.
+
+*_Beispiele:_*
+
+* {"leder"}
+* {"leder","textil"}
+* {"leder","textil"}
+
 
 | Schuhe: Material Innenfutter
 | Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
@@ -922,17 +930,44 @@ include::_includes:partial$event-procedure.adoc[]
 Die Versandkosten werden in deinem Vertrag mit limango festgelegt. limango speichert sie im limango-Backend. Versandkosten kannst du deshalb nur in Absprache mit dem limango-Partnermanagement anpassen. In plentymarkets gibt es deshalb keine Einstellungen für die Versandkosten.
 
 [#1100]
-== Fehlersuche: Log-Einträge abrufen
+== Fehlersuche und FAQ
 
-NOTE: Deine Varianten wurden nicht zu limango exportiert? Wenn mindestens eine Variante die Anforderungen von limango nicht erfüllt, werden keine Variantendaten exportiert. Deine Varianten werden also schon bei einer einzigen ungültigen Variante nicht zu limango exportiert. Um den Fehler zu finden, prüfe die Einträge im Daten-Log.
+Ist etwas schiefgelaufen? In diesem Kapitel findest du Informationen zur Fehlersuche.
+(Stand: 30.07.2022)
+
+* <<#catalogue-errors, Sonstige Fehlermeldungen>>
+* <<#check-log, Log-Einträge abrufen>>
+* <<#faq-errors, Artikelexport: Fehlermeldungen im Log>>
+* <<#faq-checklist, _Checkliste:_ Warum wird meine Variante nicht exportiert?>>
+
+[#catalogue-errors]
+=== Fehlermeldungen im Katalog
+
+[.collapseBox]
+.Wähle ein gültiges Exportformat.
+--
+
+*_Problem:_*
+
+* Du hast wahrscheinlich einen limango-Katalog mit dem alten Format *limango* kopiert und das Format auf *limango new* geändert. Jetzt wird die Fehlermeldung *Wähle ein gültiges Exportformat.* angezeigt und du kannst den Katalog nicht speichern.
+
+*_Lösung:_*
+
+. Wechsle in die Ansicht *Einstellungen*.
+. Navigiere zum Bereich *Formateinstellungen*.
+. Wähle für die Einstellung *Format* die Option *XML*.
+. Speichere den Katalog.
+
+*_Hintergrund:_* Ab Plugin-Version 1.4.3. wird das neue Format *limango new* verwendet. Dieses Format basiert auf XML, nicht mehr auf CSV wie das alte Format.
+--
+
+[#check-log]
+=== Log-Einträge abrufen
 
 include::partial$logs_abrufen.adoc[tag=data-log-intro]
 
 * *Integration* » *limango*
 
 include::partial$logs_abrufen.adoc[tag=data-log-config]
-
-[#faq]
-== FAQ
 
 include::partial$limango-faq.adoc[]
