--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -19,11 +19,13 @@ _oder_
 
 _oder_
 
-* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+* Eigenschaft des Typs *Text*, Sprache *Deutsch* +
 
 *_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* dieser Gruppe miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
 Bei limango wird der Produktname also so angezeigt: +
 `[Produktname] in [Farbwert]`
+
+*_Hinweis:_* Enthält deine Eigenschaft für *Produktname* Produkttyp und Farbe? Dann ordne für das Datenfeld *Farbwert* kein plentymarkets Datenfeld zu. Sonst ist die Farbe doppelt im Produktnamen enthalten. Ordne außerdem für das Datenfeld *Produktname* dieselbe Eigenschaft zu, die du im Abschnitt *Produkt* dem Datenfeld *Produktname* zugeordnet hast. Perspektivisch wird das zweite Datenfeld *Produktname* entfernt werden.
 | Produkt
 
 | Farbwert +
@@ -37,6 +39,8 @@ _oder_
 *_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* dieser Gruppe miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
 Bei limango wird der Produktname also so angezeigt: +
 `[Produktname] in [Farbwert]`
+
+*_Hinweis:_* Enthält deine Eigenschaft für *Produktname* Produkttyp und Farbe? Dann ordne für das Datenfeld *Farbwert* kein plentymarkets Datenfeld zu. Sonst ist die Farbe doppelt im Produktnamen enthalten. Ordne außerdem für das Datenfeld *Produktname* dieselbe Eigenschaft zu, die du im Abschnitt *Produkt* dem Datenfeld *Produktname* zugeordnet hast. Perspektivisch wird das zweite Datenfeld *Produktname* entfernt werden.
 | Produkt
 
 3+^| Produkte
@@ -75,7 +79,6 @@ _oder_
 _oder_
 
 * Eigenschaft des Typs *Text*, Sprache *Deutsch*
-
 | Produkt
 
 | Kurzbeschreibung
