--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -311,27 +311,19 @@ Futterstoff zuordnen und an der Variante speichern:
 --
 
 | Schuhe: Obermaterial
-| Für Schuhe dürfen nur die folgenden Materialien angegeben werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
 
 . Eigenschaft mit den folgenden Einstellungen erstellen:
-* Name: Schuhe
+* Name: Schuhe: Obermaterial
 * Bereich: Artikel
-* Typ:
-. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
-. Als Wert Materialangaben eingeben nach dem Muster: +
-{"material1","material2","material3"} +
-* Gültige Werte für Material:
+* Typ: Auswahl
+* Auswahlwerte:
   ** sonstiges-material
   ** leder
   ** beschichtetes-leder
   ** textil
-
-*_Beispiele:_*
-
-* {"leder"}
-* {"leder","textil"}
-* {"leder","textil"}
-
+. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
+. Für die Variante passenden Eigenschaftswert wählen.
 
 | Schuhe: Material Innenfutter
 | Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
