--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -144,7 +144,7 @@ etc.)
 *Schuhe: Material Innenfutter*; +
 *Schuhe: Material Decksohle*; +
 *Schuhe: Material Laufsohle*)
-| * Eigenschaften an Variante
+| * Eigenschaften an Hauptvariante
 
 *_Gültige Werte:_*
 
