--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -742,7 +742,7 @@ Vorschau im Katalog erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so exportiert, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Du kannst eine Datei mit den ersten 5 Datensätzen auf deinem Rechner speichern.
+→ Du kannst eine Datei mit den ersten 5 Datenzeilen auf deinem Rechner speichern.
 --
  
 Vorschau in Katalogübersicht erstellen::
@@ -762,7 +762,7 @@ Vorschau in Katalogübersicht erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so exportiert, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Du kannst eine Datei mit den ersten 5 Datensätzen auf deinem Rechner speichern.
+→ Du kannst eine Datei mit den ersten 5 Datenzeilen auf deinem Rechner speichern.
 
 --
 ====
