add exchange rate source to currencies page

--- a/docs/de-de/modules/payment/pages/waehrungen.adoc
+++ b/docs/de-de/modules/payment/pages/waehrungen.adoc
@@ -56,7 +56,8 @@ Währung umrechnen:
 |Zeigt die letzte Aktualisierung der Umrechnungsfaktoren an. Dieses Feld ist nur sichtbar, wenn du die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja* gesetzt hast.
 
 | *Umrechnungsfaktor Standard-Währung nach AED, ARS, AUD, …*
-|Die Wechselkurse sind beim Öffnen des Menüs *Einrichtung » Aufträge » Zahlung » Währungen* bereits eingetragen, müssen aber möglicherweise aktualisiert werden. Klicke neben der jeweiligen Währung auf *Reload*, um den aktuellen Wechselkurs sofort manuell zu ermitteln. Setze alternativ die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja*.
+|Die Wechselkurse sind beim Öffnen des Menüs *Einrichtung » Aufträge » Zahlung » Währungen* bereits eingetragen, müssen aber möglicherweise aktualisiert werden. Klicke neben der jeweiligen Währung auf *Reload*, um den aktuellen Wechselkurs sofort manuell zu ermitteln. Setze alternativ die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja*. +
+*_Hinweis:_* plentymarkets bezieht die Wechselkurse von link:https://x-rates.com/[x-rates-com^].
 |====
 
 [#10]
