--- a/docs/en-gb/modules/payment/pages/currencies.adoc
+++ b/docs/en-gb/modules/payment/pages/currencies.adoc
@@ -158,7 +158,7 @@ Converting currencies:
 |Setting |Explanation
 
 | *Standard currency*
-|Select the xref:payment:currencies.adoc#30[System currency] from the drop-down list.
+|Select the <<#30, system currency>> from the drop-down list.
 
 | *Automatically update conversion factors daily*
 |This option specifies whether or not the conversion factors are automatically updated on a daily basis. +
@@ -169,7 +169,9 @@ Converting currencies:
 |Displays the time of the last automatic update of the conversion factors. This field is only visible if the option *Automatically update conversion factors daily* is set to *Yes*.
 
 | *Conversion factor for standard currency into AED, ARS, AUD, ...*
-|The exchange rates are already displayed when opening the menu *Setup » Orders » Payment » Currencies*, but might need to be updated. Click on *Reload* next to the respective currency to manually update the exchange rates. Alternatively, set the option *Automatically update conversion factors daily* to *Yes*.
+|The exchange rates are already displayed when opening the menu *Setup » Orders » Payment » Currencies*, but might need to be updated. Click on *Reload* next to the respective currency to manually update the exchange rates. Alternatively, set the option *Automatically update conversion factors daily* to *Yes*. +
+*_Note:_* plentymarkets obtains the exchange rates from link:https://x-rates.com/[x-rates-com^].
+
 |====
 
 [#30]
