--- a/docs/de-de/modules/payment/pages/waehrungen.adoc
+++ b/docs/de-de/modules/payment/pages/waehrungen.adoc
@@ -45,18 +45,20 @@ Währung umrechnen:
 |Einstellung |Erläuterung
 
 | *Standard-Währung*
-|xref:payment:waehrungen.adoc#30[Systemwährung] aus der Dropdown-Liste wählen.
+|Wähle die xref:payment:waehrungen.adoc#30[Systemwährung] aus der Dropdown-Liste.
 
 | *Umrechnungsfaktoren täglich automatisch aktualisieren*
-|Bestimmt, ob die Umrechnungsfaktoren täglich automatisch aktualisiert werden oder nicht. +
+|Diese Option bestimmt, ob die Umrechnungsfaktoren täglich automatisch aktualisiert werden oder nicht. +
 *Ja* = Die Umrechnungsfaktoren werden automatisch nachts aktualisiert. Außerdem wird in der Zeile darunter die Option *Letztes automatisches Update* eingeblendet (siehe nächste Option). +
 *Nein* = Pro Währung wird ein *Reload-Symbol* angezeigt, mit dem du die Wechselkurse jederzeit manuell ermitteln kannst.
 
 | *Letztes automatisches Update*
-|Zeigt die letzte Aktualisierung der Umrechnungsfaktoren an. Dieses Feld ist nur sichtbar, wenn du die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja* gesetzt hast.
+|Zeigt die letzte Aktualisierung der Umrechnungsfaktoren an. +
+Dieses Feld ist nur sichtbar, wenn du die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja* gesetzt hast.
 
 | *Umrechnungsfaktor Standard-Währung nach AED, ARS, AUD, …*
-|Die Wechselkurse sind beim Öffnen des Menüs *Einrichtung » Aufträge » Zahlung » Währungen* bereits eingetragen, müssen aber möglicherweise aktualisiert werden. Klicke neben der jeweiligen Währung auf *Reload*, um den aktuellen Wechselkurs sofort manuell zu ermitteln. Setze alternativ die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja*. +
+|Die Wechselkurse sind beim Öffnen des Menüs *Einrichtung » Aufträge » Zahlung » Währungen* bereits eingetragen. +
+Wenn du die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Nein* gesetzt hast, musst du die Wechselkurse aktualisieren. Klicke neben der jeweiligen Währung auf *Reload*, um den aktuellen Wechselkurs sofort manuell zu ermitteln. Setze alternativ die Option *Umrechnungsfaktoren täglich automatisch aktualisieren* auf *Ja*, damit die Umrechnungsfaktoren täglich automatisch aktualisiert werden. +
 *_Hinweis:_* plentymarkets bezieht die Wechselkurse von link:https://x-rates.com/[x-rates-com^].
 |====
 
