--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -311,7 +311,7 @@ Futterstoff zuordnen und an der Variante speichern:
 --
 
 | Schuhe: Obermaterial
-| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+| Für Schuhe dürfen nur die folgenden Materialien angegeben werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
 
 . Eigenschaft mit den folgenden Einstellungen erstellen:
 * Name: Schuhe: Obermaterial
